# assured-embedded-rust

./: .gitattributes  .gitmodules  Cargo.toml  README.md
examples/audio-filter/: Cargo.toml
examples/audio-filter/src/: main.rs
examples/blinky/: Cargo.toml  README.md
examples/blinky/implem/: Cargo.toml
examples/blinky/implem/src/: lib.rs
examples/blinky/src/: main.rs
lustre/: blinky.lus
