[package]
name = "audio-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32_i2s_v12x = "0.3.0"
stm32f4xx-hal = { path = "./stm32f4xx-hal" , features = ["stm32f411", "i2s", "rtic"]}
cortex-m-rtic = "1.0"
heapless = "0.7.5"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

#[dependencies.panic-rtt-target] 
#version = "0.1.2" 
#features = ["cortex-m"]
