[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blinky_implem = {path = "./implem"}
embedded-hal = "0.2.6"
cortex-m-rtic = "1.0.0"
systick-monotonic = "1.0.0"
cortex-m-semihosting = "0.5"
panic-semihosting = "0.5.3"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f407"]

[dependencies.panic-rtt-target] 
version = "0.1.2" 
features = ["cortex-m"]
